Impressum von alter Seite

--- a/dozenten.html
+++ b/dozenten.html
@@ -32,16 +32,6 @@
       vertical-align: middle;
       text-align: center;
     }
-    .plain-text {
-      font-size: 20px;
-      font-weight: normal;
-      line-height: 1;
-    }
-    a {
-      font-weight: bold;
-      text-decoration: none;
-      color: #33CCFF;
-    }
   </style>
   <script>
     // IFTTT Slottt Machine by Jen Hamon
@@ -217,7 +207,7 @@
         <li>Geschäftsführung</li>
         <li>Social Media</li>
         <li>Datenschutzerklärung</li>
-        <li>Impressum</li>
+        <li><a href="impressum.html">Impressum</a></li>
       </ul>
     </div>
     <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
