--- a/impressum.html
+++ b/impressum.html
@@ -13,17 +13,11 @@
   <link rel="stylesheet" href="styles.css">
   <!-- Page specific styles -->
   <style>
-    .carousel-item {
-      height: 70vh;
+    h2 {
+      padding-top: 1em;
     }
-    .akadia-bg {
-      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(200, 200, 200, 0.7)), url("img/AkadiaAnsZielBG_c.jpeg") no-repeat right top;
-      height: 100%;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      color: black;
+    div {
+      padding-top: 1em;
     }
   </style>
 </head>
@@ -34,45 +28,98 @@
   <object data="logo.svg" width="100%" class="header-object"></object>
 </div>
 
-<div class="container-fluid content akadia-bg">
+
+<div class="container-lg content akadia-bg">
   <div class="row">
-    <div class="col mb-3 text-center">
-      <h1 class="align-self-center">AKADIA Akademie</h1>
-    </div>
-  </div>
+    <div class="col">
+      <h1>Impressum</h1>
 
-  <!--div class="row text-center p-1 m-0">
-    <div class="col mb-3 text-center">
-      <img src="img/Akadia.jpg" class="d-block mx-auto" width="50%" alt="Akadia Akademie">
-    </div>
-  </div-->
+      <h2>Angaben gemäß § 5 TMG</h2>
+      <div>
+        AKADIA Akademie GmbH<br>
+        Badepark 3<br>
+        39218 Schönebeck
+      </div>
+      <div>
+        Handelsregister: HRB24772<br>
+        Registergericht: Amtsgericht Stendal
+      </div>
+      <div>
+        Vertreten durch den Gesellschafter:<br>
+        Jens Günther
+      </div>
 
-  <div class="row">
-    <div class="col-12">
-      <p>AKADIA Akademie, wer sind wir eigentlich?</p>
-      <p>Akadia Akademie GmbH ist ein Bildungsträger, der Existenzgründungscoachings und Karrierecoachings anbietet.</p>
-      <p><b>Existenzgründungscoaching</b> = Beratung wie DU am sichersten, schnellsten und unkompliziertesten dein
-        eigener Chef
-        werden kannst und dazu noch erfolgreich.</p>
-      <p><b>Karrierecoaching</b> = Beratung wie DU am besten zu deinem Traumjob kommst</p>
+      <h2>Kontakt</h2>
+      <div>
+        Telefon: 03928 7639660<br>
+        E-Mail: info@akadia-akademie.de
+      </div>
 
-      <p><b>Bildungsträger</b> = eine Art von „Schule“ die Wissen an Erwachsene mit Hilfe von Lehrern/Dozenten
-        vermittelt.
-      <p>Die AKADIA Akademie GmbH wurde 2017 mit dem Ziel gegründet, Menschen zu helfen. Vor allem Menschen, denen wenig
-        Mittel zur Verfügung stehen und die von Arbeitslosengeld oder Hartz4 leben.</p>
-      <p>Dies sollte nämlich kein Grund sein auf mittelmäßige Beratungen zurückzugreifen oder es gar nicht erst zu
-        versuchen.</p>
-      <p>Unsere Coachings werden von der Agentur für Arbeit oder dem Jobcenter durch einen Aktivierungs- und
-        Vermittlungsgutschein gefördert. Das heißt für DICH ist es kostenlos, wenn du arbeitslos oder arbeitssuchend
-        bist.</p>
-      <p>Akadia arbeitet mit einem Netzwerk aus Dozenten zusammen, die alle selbstständig sind und dich somit bei der
-        Existenzgründung als Unternehmer und bei dem Karrierecoaching aus der Sicht eines Arbeitgebers bestens beraten
-        können.</p>
+      <h2>Umsatzsteuer</h2>
+      <div>
+        Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:<br>
+        DE314825332
+      </div>
+
+      </h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+      <div>
+        Jens Günther<br>
+        Badepark 3<br>
+        39218 Schönebeck
+      </div>
+      <div>
+        Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
+        teilzunehmen.
+      </div>
+
+      <h2>Haftung für Inhalte</h2>
+      <div>
+        Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen
+        Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet,
+        übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine
+        rechtswidrige Tätigkeit hinweisen.
+      </div>
+      <div>
+        Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben
+        hiervon unberührt.
+        Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung
+        möglich.
+        Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+      </div>
+
+      <h2>Haftung für Links</h2>
+      <div>
+        Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben.
+        Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen.
+        Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
+        Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
+        Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.
+      </div>
+      <div>
+        Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer
+        Rechtsverletzung nicht zumutbar.
+        Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+      </div>
+
+      <h2>Urheberrecht</h2>
+      <div>
+        Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen
+        Urheberrecht.
+        Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des
+        Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+        Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
+      </div>
+      <div>
+
+        Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter
+        beachtet.
+        Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine
+        Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von
+        Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+      </div>
     </div>
   </div>
 </div>
-<!-- Inhalt: Infoseite -->
-
 
 <!-- Container Sponsoren -->
 <div id="services" class="container-fluid orange content text-center">
@@ -147,9 +194,7 @@
   </div>
 </footer>
 
-
 <!-- Bootstrap scripts. See https://getbootstrap.com/docs/4.3/getting-started/introduction/#starter-template -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
