--- a/existenz.html
+++ b/existenz.html
@@ -124,7 +124,7 @@
         <li>Geschäftsführung</li>
         <li>Social Media</li>
         <li>Datenschutzerklärung</li>
-        <li>Impressum</li>
+        <li><a href="impressum.html">Impressum</a></li>
       </ul>
     </div>
     <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
