--- a/akadia.html
+++ b/akadia.html
@@ -105,14 +105,14 @@
   </div>
 </div>
 
-<!-- TODO zu anderen Seiten kopieren wenn fertig-->
+<!-- Footer links -->
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       Unser Team <!--oder Kontakt (aufklappen)-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
-      Social Media <!--Icons-->
+      <a href="https://www.facebook.com/AkadiaAkademie/">Social Media</a> <!-- TODO Icons-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a href="datenschutz.html">Datenschutzerklärung</a>
