--- a/karriere.html
+++ b/karriere.html
@@ -12,13 +12,13 @@
   <!-- Page specific styles -->
   <style>
     #neuigkeiten {
-      background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("money.jpg") no-repeat center top;
+      /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("money.jpg") no-repeat center top;
       height: 100%;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
-      color: white;
+      color: white;*/
     }
   </style>
 </head>
@@ -63,46 +63,56 @@
 <!-- Inhalt: Kontaktformular -->
 
 
-<footer class="container-fluid content text-left">
+<!-- Container Sponsoren -->
+<div id="services" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Über uns</h4>
-      <ul>
-        <li>Moralischer Kompass</li>
-        <li>Geschäftsführung</li>
-        <li>Social Media</li>
-        <li>Datenschutzerklärung</li>
-        <li><a href="impressum.html">Impressum</a></li>
-      </ul>
+    <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
+      <a href="https://www.bvmw.de/" target="_blank">
+        <img src="bvmw-weiss.png" alt="BVMW" class="sponsor">
+      </a>
     </div>
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Service</h4>
-      <ul>
-        <li>Strategiegespräch vereinbaren</li>
-        <li>Ansprechpartner</li>
-        <li>AVGS-Gutschein beantragen</li>
-        <li>Partnernetzwerk</li>
-      </ul>
+    <div class="col col-md-2 px-2 pt-2 pt-md-0">
+      <a href="https://www.wjd.de/" target="_blank">
+        <img src="wj-weiss.png" alt="WJ" class="sponsor">
+      </a>
     </div>
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Schnellhilfe</h4>
-      <ul>
-        <li>Login</li>
-        <li>Standort in meiner Nähe</li>
-        <li>Wo ist die nächste Agentur für Arbeit?</li>
-        <li>Wo ist das nächste Jobcenter?</li>
-      </ul>
+    <div class="col col-md-2 px-2 pt-2 pt-md-0">
+      <a href="http://apv-zert.de/" target="_blank">
+        <img src="apv-weiss.png" alt="APV" class="sponsor">
+      </a>
+    </div>
+    <div class="col col-md-2 px-2 pt-2 pt-md-0">
+      <a href="https://www.arbeitsagentur.de/" target="_blank">
+        <img src="afa-weiss.png" alt="Bundesagentur für Arbeit" class="sponsor">
+      </a>
+    </div>
+    <div class="col col-md-2 px-2 pt-2 pt-md-0">
+      <a href="https://www.jobcenter-ge.de/" target="_blank">
+        <img src="jobcenter-weiss.png" alt="Jobcenter" class="sponsor">
+      </a>
     </div>
   </div>
-  <div class="gefoerdert pt-3">
-    <p>gefördert durch Sachsen-Anhalt Digital Innovation im Projekt
-      "Digitalisierung und Teilautomatisierung der Heranführung an eine selbständige Tätigkeit nach SGB III"</p>
-    <p>Projektzeitraum 20.05.2021 -> 31.12.2021</p>
-    <p>
-      <img src="foerder.jpg">
-    </p>
+</div>
+
+<!-- Footer links -->
+<footer class="container-fluid content text-left pb-0">
+  <div class="row justify-content-center">
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      Unser Team <!--oder Kontakt (aufklappen)-->
+    </div>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="https://www.facebook.com/AkadiaAkademie/">Social Media</a> <!-- TODO Icons-->
+    </div>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="datenschutz.html">Datenschutzerklärung</a>
+    </div>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="impressum.html">Impressum</a>
+    </div>
   </div>
+  <div class="text-center mt-3">Copyright © 2023 AKADIA Akademie GmbH. All Rights Reserved.</div>
 </footer>
+
 
 <!-- Bootstrap scripts. See https://getbootstrap.com/docs/4.3/getting-started/introduction/#starter-template -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
