--- a/standorte.html
+++ b/standorte.html
@@ -298,6 +298,8 @@
     </div>
   </div>
 </div>
+
+
 <!-- Container Sponsoren -->
 <div id="services" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
@@ -329,46 +331,23 @@
   </div>
 </div>
 
-
-<footer class="container-fluid content text-left">
+<!-- Footer links -->
+<footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Über uns</h4>
-      <ul>
-        <li>Moralischer Kompass</li>
-        <li>Geschäftsführung</li>
-        <li>Social Media</li>
-        <li>Datenschutzerklärung</li>
-        <li><a href="impressum.html">Impressum</a></li>
-      </ul>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      Unser Team <!--oder Kontakt (aufklappen)-->
     </div>
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Service</h4>
-      <ul>
-        <li>Strategiegespräch vereinbaren</li>
-        <li>Ansprechpartner</li>
-        <li>AVGS-Gutschein beantragen</li>
-        <li>Partnernetzwerk</li>
-      </ul>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="https://www.facebook.com/AkadiaAkademie/">Social Media</a> <!-- TODO Icons-->
     </div>
-    <div class="col-offset-2 col-8 col-md-offset-0 col-md-4 pt-3 pt-md-0">
-      <h4>Schnellhilfe</h4>
-      <ul>
-        <li>Login</li>
-        <li>Standort in meiner Nähe</li>
-        <li>Wo ist die nächste Agentur für Arbeit?</li>
-        <li>Wo ist das nächste Jobcenter?</li>
-      </ul>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="datenschutz.html">Datenschutzerklärung</a>
+    </div>
+    <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
+      <a href="impressum.html">Impressum</a>
     </div>
   </div>
-  <div class="gefoerdert pt-3">
-    <p>gefördert durch Sachsen-Anhalt Digital Innovation im Projekt
-      "Digitalisierung und Teilautomatisierung der Heranführung an eine selbständige Tätigkeit nach SGB III"</p>
-    <p>Projektzeitraum 20.05.2021 -> 31.12.2021</p>
-    <p>
-      <img src="foerder.jpg">
-    </p>
-  </div>
+  <div class="text-center mt-3">Copyright © 2023 AKADIA Akademie GmbH. All Rights Reserved.</div>
 </footer>
 
 
