--- a/datenschutz.html
+++ b/datenschutz.html
@@ -131,7 +131,7 @@
       <div>AKADIA Akademie GmbH<br>
         <br>
         Telefon: 03928 7639660<br>
-        E-Mail: info@akadia-akademie.de<br>
+        E-Mail: kontakt@akadia-akademie.de<br>
       </div>
       <div>Verantwortliche Stelle ist die natürliche oder juristische Person, die allein oder gemeinsam mit anderen über
         die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.B. Namen, E-Mail-Adressen o. Ä.)
