--- a/impressum.html
+++ b/impressum.html
@@ -46,13 +46,13 @@
       </div>
       <div>
         Vertreten durch den Gesellschafter:<br>
-        Jens Günther
+        Linglong Holding UG
       </div>
 
       <h2>Kontakt</h2>
       <div>
         Telefon: 03928 7639660<br>
-        E-Mail: info@akadia-akademie.de
+        E-Mail: kontakt@akadia-akademie.de
       </div>
 
       <h2>Umsatzsteuer</h2>
@@ -63,7 +63,7 @@
 
       </h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
       <div>
-        Jens Günther<br>
+        Jens Günther, Katja Ehrentraut<br>
         Badepark 3<br>
         39218 Schönebeck
       </div>
