Flyer und title fix

--- a/existenz.html
+++ b/existenz.html
@@ -47,8 +47,8 @@
         sein lassen sollte und sie sehen dich und deine Idee.</p>
 
       <div class="text-center mb-3">
-        <a href="Flyer.pdf" download="Flyer.pdf">
-          <button class="mt-3 btn btn-dark">PDF Download</button>
+        <a href="pdf/Existenz.pdf" download="Akadia-Akademie-Existenzgründung.pdf">
+          <div class="button">Hier mehr Infos herunterladen</div>
         </a>
       </div>
     </div>
