--- a/karriere.html
+++ b/karriere.html
@@ -48,9 +48,8 @@
       <p>Aber Arbeit zu haben ist kein Garant für Geld und Zufriedenheit. Dein Job soll keine Last sein, er soll dir Freude bringen, das Gefühl etwas zu bewegen und dein Leben zu sichern!</p>
       <p>Akadia kann dir dabei helfen dem ein Stück näher zu kommen.</p>
       <p>Bei unserem Einzelcoaching besprechen wir Themen, die DICH weiterbringen. Deine Vorstellungen und wie DU sie am besten umsetzen kannst.</p>
-      <hr>
-      <a href="https://akadia-akademie.de/strategiegespraech-vereinbaren/">
-        <div class="button">Jetzt Strategiecoaching anfordern</div>
+      <a href="pdf/Karriere.pdf" download="Akadia-Akademie-Karrierecoaching.pdf">
+        <div class="button">Hier mehr Infos herunterladen</div>
       </a>
     </div>
     <div class="d-block d-md-none col-12">
