Social media icons

--- a/index.html
+++ b/index.html
@@ -117,7 +117,18 @@
       <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a> <!--oder Kontakt (aufklappen)-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
-      <a href="https://www.facebook.com/AkadiaAkademie/">Social Media</a> <!-- TODO Icons-->
+      <a href="https://www.facebook.com/AkadiaAkademie/">
+        <img src="img/facebook.png" class="social-icon">
+      </a>
+      <a href="https://www.instagram.com/akadiaakademie/?next=%2F">
+        <img src="img/instagram.png" class="social-icon">
+      </a>
+      <a href="https://www.tiktok.com/@akadia.akademie">
+        <img src="img/tiktok.png" class="social-icon">
+      </a>
+      <a href="https://www.youtube.com/channel/UCtZtjrYvpw4i-tO33dTQanQ">
+        <img src="img/youtube.png" class="social-icon">
+      </a>
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a href="datenschutz.html">Datenschutz</a>
