Karriere bild gefixt

--- a/karriere.html
+++ b/karriere.html
@@ -34,7 +34,7 @@
 <div id="neuigkeiten" class="container-fluid content">
   <div class="row">
     <div class="d-none d-md-block col-md-6 col-lg-4">
-      <img src="img/ExistenzFlyer.jpg" class="d-block mx-auto" width="100%" alt="Existenzgründung">
+      <img src="img/KarriereFlyer.jpg" class="d-block mx-auto" width="100%">
     </div>
     <div class="col-12 col-md-6 col-lg-8 mb-3">
       <h1>Karrierecoaching</h1>
@@ -53,7 +53,7 @@
       </a>
     </div>
     <div class="d-block d-md-none col-12">
-      <img src="img/ExistenzFlyer.jpg" class="d-block mx-auto" width="100%" alt="Existenzgründung">
+      <img src="img/KarriereFlyer.jpg" class="d-block mx-auto" width="100%">
     </div>
   </div>
 </div>
