--- a/existenz.html
+++ b/existenz.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="col-12 col-md-6 col-lg-4">
-      <img src="img/ExistenzFlyer.jpg" class="d-block mx-auto" width="100%" alt="Existenzgründung">
+      <img src="img/ExistenzFlyer.jpg" class="d-block mx-auto" width="100%">
     </div>
   </div>
 </div>
