Font getauscht: alles mit Akadia font

--- a/dozenten.html
+++ b/dozenten.html
@@ -24,7 +24,7 @@
   <style>
     /* Typography */
     body {
-      font: 400 70px Roboto, sans-serif;
+      font-size: 70px;
       line-height: 1;
     }
     footer {
