--- a/standorte-17.html
+++ b/standorte-17.html
@@ -69,18 +69,17 @@
     });
 
     function animate(targetId) {
-      let n = 18; // Number of sections "Standorte"
       if (timeoutId) clearTimeout(timeoutId);
       let click = !!targetId;
 
-      let idx = targetId ?? Math.round(arc * n / 360);
+      let idx = targetId ?? Math.round(arc * 17 / 360);
       if (targetId) {
-        arc = Math.floor(idx * 360 / n) + Math.floor(arc / 360) * 360;
+        arc = Math.floor(idx * 360 / 17) + Math.floor(arc / 360) * 360;
       } else {
         let newIdx = idx + (Math.random() * 4 | 0) + 2;
-        if (newIdx % 360 > idx % 360) idx = Math.floor(idx / n) * n
+        if (newIdx % 360 > idx % 360) idx = Math.floor(idx / 17) * 17
         oldArc = arc;
-        arc = Math.floor(newIdx * 360 / n);
+        arc = Math.floor(newIdx * 360 / 17);
       }
       var s = document.getElementById("wheel");
       s.style.webkitTransform = 'rotate(' + arc + 'deg)';
@@ -92,9 +91,9 @@
       timeoutId = setTimeout(animate, (click ? 10000 : 2000));
 
       if (!targetId) {
-        targetId = Math.floor(((arc - (360/n)) % 360) / n + 1);
+        targetId = Math.floor(((arc - 20) % 360) / 20 + 1);
       }
-      for (let i = 1; i <= n; i++) {
+      for (let i = 1; i < 18; i++) {
         //document.getElementById("text" + i).style.display = 'none';
         $('.infotext').hide();
       }
@@ -138,80 +137,76 @@
          class="col-12 col-sm-12 col-md-8 col-lg-6"
          xmlns="http://www.w3.org/2000/svg"
          width="50%" height="50%"
-         viewBox="0 0 220 204">
-      <g transform="translate(110 102)">
+         viewBox="0 0 220 200">
+      <g transform="translate(110 100)">
         <g id="wheel" class="spin">
-          <g transform="rotate(  0)">
-            <polygon onclick="top.animate(18)" points="0,0 -100,-18 -100,18" style="fill:#e39706;"/>
-            <text onclick="top.animate(18)" class="so" x="-96" y="4">Dein Sofa?</text>
+          <g id="piece18" class="piece" transform="rotate(  0)">
+            <polygon onclick="top.animate(17)" points="0,0 -100,-19 -100,20" style="fill:#e39706;"/>
+            <text onclick="top.animate(17)" class="so" x="-96" y="4">Dein Sofa?</text>
           </g>
-          <g transform="rotate( 20)">
-            <polygon onclick="top.animate(17)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(17)" class="so" x="-96" y="4">AUERBACH</text>
-          </g>
-          <g transform="rotate( 40)">
-            <polygon onclick="top.animate(16)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
+          <g id="piece17" class="piece" transform="rotate( 21)">
+            <polygon onclick="top.animate(16)" points="0,0 -100,-19 -100,19" style="fill:#4d6a75;"/>
             <text onclick="top.animate(16)" class="so" x="-96" y="4">POTSDAM</text>
           </g>
-          <g transform="rotate( 60)">
-            <polygon onclick="top.animate(15)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
+          <g id="piece16" class="piece" transform="rotate( 42)">
+            <polygon onclick="top.animate(15)" points="0,0 -100,-19 -100,19" style="fill:#93b4c2;"/>
             <text onclick="top.animate(15)" class="so" x="-96" y="4">WUPPERTAL</text>
           </g>
-          <g transform="rotate( 80)">
-            <polygon onclick="top.animate(14)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
+          <g transform="rotate( 63)">
+            <polygon onclick="top.animate(14)" points="0,0 -100,-19 -100,19" style="fill:#638590;"/>
             <text onclick="top.animate(14)" class="so" x="-96" y="4">ULM</text>
           </g>
-          <g transform="rotate( 100)">
-            <polygon onclick="top.animate(13)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
+          <g transform="rotate( 84)">
+            <polygon onclick="top.animate(13)" points="0,0 -100,-19 -100,19" style="fill:#7da1aa;"/>
             <text onclick="top.animate(13)" class="so" x="-96" y="4">MAGDEBURG</text>
           </g>
-          <g transform="rotate(120)">
-            <polygon onclick="top.animate(12)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
+          <g transform="rotate(105)">
+            <polygon onclick="top.animate(12)" points="0,0 -100,-19 -100,19" style="fill:#4d6a75;"/>
             <text onclick="top.animate(12)" class="so" x="-96" y="4">ZOSSEN</text>
           </g>
-          <g transform="rotate(140)">
-            <polygon onclick="top.animate(11)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
+          <g transform="rotate(127)">
+            <polygon onclick="top.animate(11)" points="0,0 -100,-19 -100,20" style="fill:#93b4c2;"/>
             <text onclick="top.animate(11)" class="so" x="-96" y="4">LEINATAL</text>
           </g>
-          <g transform="rotate(160)">
-            <polygon onclick="top.animate(10)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
+          <g transform="rotate(148)">
+            <polygon onclick="top.animate(10)" points="0,0 -100,-19 -100,19" style="fill:#638590;"/>
             <text onclick="top.animate(10)" class="so" x="-96" y="0" style="font-size: 10px">NEUKIRCH/</text>
             <text onclick="top.animate(10)" class="so" x="-96" y="8" style="font-size: 10px">LAUSITZ</text>
           </g>
-          <g transform="rotate(180)">
-            <polygon onclick="top.animate(9)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
+          <g transform="rotate(169)">
+            <polygon onclick="top.animate(9)" points="0,0 -100,-19 -100,19" style="fill:#7da1aa;"/>
             <text onclick="top.animate(9)" class="so" x="-96" y="4">WETZLAR</text>
           </g>
-          <g transform="rotate(200)">
-            <polygon onclick="top.animate(8)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
+          <g transform="rotate(190)">
+            <polygon onclick="top.animate(8)" points="0,0 -100,-19 -100,19" style="fill:#4d6a75;"/>
             <text onclick="top.animate(8)" class="so" x="-96" y="4">BAD SAAROW</text>
           </g>
-          <g transform="rotate(220)">
-            <polygon onclick="top.animate(7)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
+          <g transform="rotate(211)">
+            <polygon onclick="top.animate(7)" points="0,0 -100,-19 -100,19" style="fill:#93b4c2;"/>
             <text onclick="top.animate(7)" class="so" x="-96" y="4" style="font-size: 10px">WERNIGERODE</text>
           </g>
-          <g transform="rotate(240)">
-            <polygon onclick="top.animate(6)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
+          <g transform="rotate(232)">
+            <polygon onclick="top.animate(6)" points="0,0 -100,-19 -100,19" style="fill:#638590;"/>
             <text onclick="top.animate(6)" class="so" x="-96" y="4">GERA</text>
           </g>
-          <g transform="rotate(260)">
-            <polygon onclick="top.animate(5)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
+          <g transform="rotate(254)">
+            <polygon onclick="top.animate(5)" points="0,0 -100,-19 -100,20" style="fill:#7da1aa;"/>
             <text onclick="top.animate(5)" class="so" x="-96" y="4">MAINZ</text>
           </g>
-          <g transform="rotate(280)">
-            <polygon onclick="top.animate(4)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
+          <g transform="rotate(275)">
+            <polygon onclick="top.animate(4)" points="0,0 -100,-19 -100,19" style="fill:#4d6a75;"/>
             <text onclick="top.animate(4)" class="so" x="-96" y="4">STAßFURT</text>
           </g>
-          <g transform="rotate(300)">
-            <polygon onclick="top.animate(3)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
+          <g transform="rotate(296)">
+            <polygon onclick="top.animate(3)" points="0,0 -100,-19 -100,19" style="fill:#93b4c2;"/>
             <text onclick="top.animate(3)" class="so" x="-96" y="4">DRESDEN</text>
           </g>
-          <g transform="rotate(320)">
-            <polygon onclick="top.animate(2)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
+          <g transform="rotate(317)">
+            <polygon onclick="top.animate(2)" points="0,0 -100,-19 -100,19" style="fill:#638590;"/>
             <text onclick="top.animate(2)" class="so" x="-96" y="4">BERLIN</text>
           </g>
-          <g transform="rotate(340)">
-            <polygon onclick="top.animate(1)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
+          <g transform="rotate(338)">
+            <polygon onclick="top.animate(1)" points="0,0 -100,-19 -100,19" style="fill:#7da1aa;"/>
             <text onclick="top.animate(1)" class="so" x="-96" y="4">SCHÖNEBECK</text>
           </g>
         </g>
@@ -222,6 +217,7 @@
       <div id="text1" class="infotext pt-3">
         <h1>SCHÖNEBECK</h1>
         <div id="text1short">Badepark 3, 39218 Schönebeck</div>
+        <!--div id="text2long" style="display: none;">Lorem ipsum</div><div class="text-center"><button class="mt-3 btn btn-dark" style="bg-color:white;" onclick="showInfo(2, true)">Mehr Infos...</button></div-->
       </div>
       <div id="text2" class="infotext pt-3">
         <h1>BERLIN</h1>
@@ -287,12 +283,8 @@
         <div id="text16short">Luzernstraße 4, 14469 Potzdam</div>
       </div>
       <div id="text17" class="infotext pt-3">
-        <h1>AUERBACH</h1>
-        <div id="text17short">Freudenthal 1, 08209 Auerbach</div>
-      </div>
-      <div id="text18" class="infotext pt-3">
         <h1>Dein Sofa</h1>
-        <div id="text18short">Zuhause oder im Cafe, wo du gerade bist</div>
+        <div id="text17short">Zuhause oder im Cafe, wo du gerade bist</div>
       </div>
     </div>
   </div>
