Texte Existenz und Karriere verbessert

--- a/existenz.html
+++ b/existenz.html
@@ -42,10 +42,17 @@
       <p>Aber eins vorweg: Unternehmer sein und bleiben ist ein Prozess, der dir nicht über Nacht eine Rolex und einen
         Porsche bringt. Es ist ein steiniger Weg mit Höhen und Tiefen. Es kostet, wie man so sagt, Blut, Schweiß und
         Tränen. Aber das ist es WERT!</p>
-      <p>Alle Dozenten bei Akadia sind selbst Unternehmer. Jeder von ihnen war einmal dort, wo du dich jetzt befindest.
-        Und jeder von ihnen hat es geschafft erfolgreich zu sein. Die Dozenten wissen, worauf es ankommt, was man lieber
-        sein lassen sollte und sie sehen dich und deine Idee.</p>
-
+      <p>Bei einer Existenzgründung ist die richtige Planung und Vorbereitung das A und O. Vom Businessplan angefangen
+        über steuerliche Aspekte, Grundlagen der Buchhaltung, Umgang mit Mitarbeitern bis hin zum persönlichen
+        Zeitmanagement. Dies war natürlich nur ein kleiner Auszug an Themen über die man sich Gedanken machen und
+        unterhalten sollte.</p>
+      <p>Da alle Dozenten bei Akadia selbst Unternehmer sind, sind sie die richtigen Helfer an deiner Seite. Jeder von
+        ihnen war einmal dort, wo du dich jetzt befindest. Und jeder von ihnen hat es geschafft erfolgreich zu sein.
+        Unsere Dozenten wissen, worauf es ankommt, was man lieber sein lassen sollte, und sie sehen dich und deine
+        Idee.</p>
+      <p>Das Existenzgründungscoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du
+        arbeitssuchend oder arbeitslos gemeldet bist. Für mehr Informationen dazu und unseren Coachings lade dir einfach
+        unseren kostenlosen Flyer herunter.</p>
       <div class="text-center mb-3">
         <a href="pdf/Existenz.pdf" download="Akadia-Akademie-Existenzgründung.pdf">
           <div class="button">Hier mehr Infos herunterladen</div>
@@ -118,7 +125,8 @@
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
-      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a> <!--oder Kontakt (aufklappen)-->
+      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a>
+      <!--oder Kontakt (aufklappen)-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a href="https://www.facebook.com/AkadiaAkademie/">
