--- a/karriere.html
+++ b/karriere.html
@@ -48,6 +48,8 @@
       <p>Aber Arbeit zu haben ist kein Garant für Geld und Zufriedenheit. Dein Job soll keine Last sein, er soll dir Freude bringen, das Gefühl etwas zu bewegen und dein Leben zu sichern!</p>
       <p>Akadia kann dir dabei helfen dem ein Stück näher zu kommen.</p>
       <p>Bei unserem Einzelcoaching besprechen wir Themen, die DICH weiterbringen. Deine Vorstellungen und wie DU sie am besten umsetzen kannst.</p>
+      <p>Das Karrierecoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du arbeitssuchend oder arbeitslos gemeldet bist. Für mehr Informationen dazu und unseren Coachings lade dir einfach unseren kostenlosen Flyer herunter.
+      </p>
       <a href="pdf/Karriere.pdf" download="Akadia-Akademie-Karrierecoaching.pdf">
         <div class="button">Hier mehr Infos herunterladen</div>
       </a>
